# Sotsuken

./: .gitignor  .gitignore  LICENSE.txt  README.md  auto_mv.py  create_obj.py  distortion.py  generate_environment_360.py  grid_editor.py  grid_editor_perspective.py  grid_editor_warpmap.py  grid_utils.py  init_grids.py  main.py  media_player.py  media_player_core.py  media_player_multi.py  object_loader.py  percentage.py  precompute_warp_maps.py  pyproject.toml  test.py  view_environment.py  warp_engine.py
config/: edit_profile.json  environment_config.py
config/projector_profiles/: D1_perspective_points.json  D1_warp_map_points.json  D2_perspective_points.json  D2_warp_map_points.json  D3_perspective_points.json  D3_warp_map_points.json  D4_perspective_points.json  D4_warp_map_points.json  __._DISPLAY1_perspective_points.json  __._DISPLAY1_warp_map_points.json  __._DISPLAY2_perspective_points.json  __._DISPLAY2_warp_map_points.json  __._DISPLAY3_perspective_points.json
editor/: grid_editor_perspective.py  grid_editor_warpmap.py  grid_utils.py
runtime/: media_player_multi.py
settings/: __._DISPLAY1_points.json  __._DISPLAY2.json  __._DISPLAY2_points.json  edit_profile.json
settings/config/: environment_config.py
sovenv/: pyvenv.cfg
sovenv/Scripts/: activate  activate.bat
